# CICD-python-example

./: .gitignore  LICENSE  README.md  apptainer.def  pyproject.toml
.github/workflows/: release.yml
